finish gallery and add more images

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Spam Musubi</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="img/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   </head>
   <body>
     <div class="header">
-      <h1>Spam Musubi</h1>
+      <h1><img src="img/spam-logo.png" alt="spam logo"> Musubi</h1>
       <div class="nav">
         <ul>
           <li><a href="#">Home</a></li>
@@ -22,15 +23,29 @@
     <div class="content">
       <div class="feature-spam">
         <p>Feature Spam</p>
+        <img src="img/sizzle.gif" alt="sizzle glitter text">
       </div>
       <div class="section gallery-column">
-        <p>Gallery</p>
+        <h3>Gallery</h3>
+        <div class="gallery-item">
+          <img src="img/gallery1.png" alt="spam illustration">
+        </div>
+        <div class="gallery-item">
+          <img src="img/gallery2.jpg" alt="spam illustration">
+        </div>
+        <div class="gallery-item">
+          <img src="img/gallery3.png" alt="spam illustration">
+        </div>
+        <div class="gallery-item">
+          <img src="img/gallery4.png" alt="spam illustration">
+        </div>
       </div>
       <div class="section recipe-column">
-        <p>Recipe</p>
+        <h3>Recipe</h3>
       </div>
       <div class="section nutrition-column">
-        <p>Nutrition facts</p>
+        <h3>Nutrition facts</h3>
+
       </div>
     </div>
     <div class="footer">
