--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     </div>
     <div class="content">
       <div class="feature-spam">
-        <p>Feature Spam</p>
         <img src="img/sizzle.gif" alt="sizzle glitter text">
       </div>
       <div class="section gallery-column">
@@ -44,17 +43,17 @@
         <h3>Recipe</h3>
         <h4>Ingredients</h4>
         <ul>
-          <li>2 slices SPAM® - sliced 3/8" thick</li>
+          <li>2 slices spam - sliced 3/8" thick</li>
           <li>3 ounces cooked seasoned white rice</li>
           <li>1tsp furikake seasoning</li>
           <li>1 whole sheet nori</li>
         </ul>
         <h4>Directions</h4>
         <ol>
-          <li>In large skillet, cook SPAM® Classic until lightly browned and crisp.</li>
-          <li>Place rice into musubi press or line inside of empty SPAM® can with plastic wrap and place rice in can. Press rice down firmly.</li>
+          <li>In large skillet, cook spam until lightly browned and crisp.</li>
+          <li>Place rice into musubi press or line inside of empty spam can with plastic wrap and place rice in can. Press rice down firmly.</li>
           <li>Sprinkle with seasoned furikake and toasted sesame seeds, if desired.</li>
-          <li>Place SPAM® Classic on rice in press or in can.  Press down firmly.</li>
+          <li>Place spam on rice in press or in can.  Press down firmly.</li>
           <li>Remove SPAM® and rice from musubi press or can.</li>
           <li>On work surface, cut nori to desired width.</li>
           <li>Lay nori shiny-side-down; top with pressed spam and rice. Wrap nori fully around. Serve immediately.</li>
