add table of fun facts

--- a/index.html
+++ b/index.html
@@ -38,14 +38,21 @@
         <div class="gallery-item">
           <img src="img/gallery4.png" alt="spam illustration">
         </div>
+        <div class="gallery-item">
+          <img src="img/gallery5.jpg" alt="spam illustration">
+        </div>
+        <div class="gallery-item">
+          <img src="img/gallery6.jpg" alt="spam illustration">
+        </div>
       </div>
       <div class="section recipe-column">
         <h3>Recipe</h3>
+        <p>★★★★★</p>
         <h4>Ingredients</h4>
         <ul>
           <li>2 slices spam - sliced 3/8" thick</li>
           <li>3 ounces cooked seasoned white rice</li>
-          <li>1tsp furikake seasoning</li>
+          <li>1tsp furikaki seasoning</li>
           <li>1 whole sheet nori</li>
         </ul>
         <h4>Directions</h4>
@@ -59,9 +66,35 @@
           <li>Lay nori shiny-side-down; top with pressed spam and rice. Wrap nori fully around. Serve immediately.</li>
         </ol>
       </div>
-      <div class="section nutrition-column">
-        <h3>Nutrition facts</h3>
-
+      <div class="section fun-column">
+        <h3>Fun Spam Facts</h3>
+        <table>
+          <thead>
+            <tr>
+              Did You Know:
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>There are 12.8 cas of spam product eaten every second.</td>
+            </tr>
+            <tr>
+              <td>There are 15 different varieties of spam products</td>
+            </tr>
+            <tr>
+              <td>Over 8 billion cans of spam have been sold.</td>
+            </tr>
+            <tr>
+              <td>Big Ben is 1,163 spam cans tall.</td>
+            </tr>
+            <tr>
+              <td>The canjo is a banjo made using a spam can.</td>
+            </tr>
+            <tr>
+              <td>Hawaii eats seven million cans of spam per year.</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
     <div class="footer">
