add table styling

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <table>
           <thead>
             <tr>
-              Did You Know:
+              <th>Did You Know:</th>
             </tr>
           </thead>
           <tbody>
@@ -92,6 +92,12 @@
             </tr>
             <tr>
               <td>Hawaii eats seven million cans of spam per year.</td>
+            </tr>
+            <tr>
+              <td>In Southeast Asia, spam is given as a luxury gift.</td>
+            </tr>
+            <tr>
+              <td>It would take 415,469,599 spam cans to circle the earth.</td>
             </tr>
           </tbody>
         </table>
