--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
           </tbody>
         </table>
       </div>
+      <div class="bottom-banner">
+        <img src="img/spam-banner.gif" alt="spam cooking gif">
+      </div>
     </div>
     <div class="footer">
       <p>&copy; Copyright 2017</p>
